--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
            <link rel = "stylesheet" type = "text/css"href = "Style.css" />                   
     </head>
-     <body style="background-color: black;">    
+     <body>    
         <div>
           <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;"> Style4U </h1>
         </div>
-        <div class="CButton">
+    <div id="container" >
+           <div class="CButton">
            <button>Men</button> <button>Women</button>               
-        </div>  
-
+            </div>  
+    </div> 
     </body>
 
 </html>
