--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <head>
          <title>Test</title>
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
-           <link rel = "stylesheet" type = "text/css"href = "style.css" />                   
+           <link rel = "stylesheet" type = "text/css"href = "Style.css" />                   
     </head>
-     <body>    
+     <body style="background-color: black;">    
         <div>
           <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;"> Style4U </h1>
         </div>
-    <div id="container" >
-           <div class="CButton">
+        <div class="CButton">
            <button>Men</button> <button>Women</button>               
-            </div>  
-    </div> 
+        </div>  
+
     </body>
 
 </html>
