--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
      <body style="background-color: black;">    
         <div>
           <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;"> Style4U </h1>
+          <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;">New</h1>
         </div>
         <div class="CButton">
            <button>Men</button> <button>Women</button>               
         </div>  
+
 
     </body>
 
