--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
      <body style="background-color: black;">    
         <div>
-          <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;"> Style4U </h1>
-          <h1 style="text-align: center; font-family: 'Alata'; color: blanchedalmond;">New</h1>
+          <h1 style="text-align: center; font-family: 'Alata'; color: white;"> Style4U </h1>
+          <h5 class="GenderTXT">Choose your gender </h5>
         </div>
         <div class="CButton">
            <button>Men</button> <button>Women</button>               
