--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
          <title>Test</title>
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
            <link rel = "stylesheet" type = "text/css"href = "style.css" />                   
+    
     </head>
-     <body style="background-color: black;">    
-        <div>
-          <h1 style="text-align: center; font-family: 'Alata'; color: white;"> Style4U </h1>
-          <h3 class="GenderTXT">Choose your gender </h3>
+    <body style="background-color: black;">    
+        <div class="title">
+             <h1 style="text-align: center; font-family: 'Alata'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
+             <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
-           <button>Men</button> <button>Women</button>               
+             <button id="Men">Men</button> <button id="Women">Women</button>               
         </div>  
-
-
     </body>
 
 </html>
