--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
          <title>Test</title>
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
-           <link rel = "stylesheet" type = "text/css"href = "style.css" />                   
+           <link rel = "stylesheet" type = "text/css"href = "style.css" />  
+           <script src="script.js"></script>                 
     
     </head>
     <body style="background-color: black;">    
@@ -12,7 +13,7 @@
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
-             <button id="Men">Men</button> <button id="Women">Women</button>               
+             <button id="Men" >Men</button> <button id="Women">Women</button>               
         </div>  
     </body>
 
