Hide or Show Img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
-             <button id="Men" >Men</button> <button id="Women">Women</button>               
+             <button id="Men" >Men</button> <button id="Women">Women</button>    
+             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="200" height="300" style="visibility: hidden;"  >   
+             <img id="imgWomen" src="https://i.pinimg.com/564x/e3/4a/a9/e34aa9f77c34b668d214d9ee76115735.jpg" width="200" height="300" style="visibility: hidden;"  >  
         </div>  
     </body>
 
