--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
-             <button id="Men" onclick="men()">Men</button> <button id="Women"  onclick="women()">Women</button>    
-             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="200" height="300" style="visibility: hidden;"  >   
+             <button id="Men" onclick="men()">Men</button> <button id="Women"  onclick="women()">Women</button>   
+             <br> 
+             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="200" height="300" style="visibility: hidden; margin: 50px;"  >   
              <img id="imgWomen" src="https://i.pinimg.com/564x/e3/4a/a9/e34aa9f77c34b668d214d9ee76115735.jpg" width="200" height="300" style="visibility: hidden;"  >  
         </div>  
     </body>
