--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="CButton">
              <button id="Men" onclick="men();womenquit();">Men</button> <button id="Women"  onclick="women();menquit();">Women</button>   
              <br> 
-             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="400" height="600" style="visibility: hidden; margin: 50px;"  >   
+             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="400" height="600" style="visibility: hidden; margin: 50px 100pc 50px 50px;"  >   
              <img id="imgWomen" src="https://i.pinimg.com/564x/e3/4a/a9/e34aa9f77c34b668d214d9ee76115735.jpg" width="400" height="600" style="visibility: hidden; margin: 50px;"  >  
         </div>  
     </body>
