--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body style="background-color: black;">    
         <div class="title">
-             <h1 style="text-align: center; font-family: 'Alata'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
+             <h1 style="text-align: center; font-family: 'inherit'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
