--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
          <title>Test</title>
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
+          <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
            <link rel = "stylesheet" type = "text/css"href = "style.css" />  
            <script src="script.js"></script>                 
     
     </head>
     <body style="background-color: black;">    
         <div class="title">
-             <h1 style="text-align: center; font-family: 'inherit'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
+             <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
