--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
          <title>Test</title>
           <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
-          <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
            <link rel = "stylesheet" type = "text/css"href = "style.css" />  
            <script src="script.js"></script>                 
     
