--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body style="background-color:white;">    
         <div class="title">
-             <h1 id="Syle4U"> Style4U </h1>
+             <h1 id="Style4U"> Style4U </h1>
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
