Back to The good old Days

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+        
+</html>
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,9 +10,9 @@
            <script src="script.js"></script>                 
     
     </head>
-    <body style="background-color:white;">    
+    <body style="background-color: black;">    
         <div class="title">
-             <h1 id="Style4U"> Style4U </h1>
+             <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
              <h3 id="GenderTXT">Style for Everyone</h3>
         </div>
         <div class="CButton">
