--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
            <script src="script.js"></script>                 
     
     </head>
-    <body style="background-color: black;">    
+    <body style="background-color: white;">    
         <div class="title">
              <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
              <h3 id="GenderTXT">Style for Everyone</h3>
