--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body style="background-color: white;">    
         <div class="title">
-             <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px;"> Style4U </h1>
-             <h3 id="GenderTXT">Style for Everyone</h3>
+             <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px; letter-spacing: 0.32em;"> STYLE4U </h1>
+             <h3 id="GenderTXT">STYLE FOR EVERYONE</h3>
         </div>
         <div class="CButton">
              <button id="Men" onclick="men();womenquit();">Men</button> <button id="Women"  onclick="women();menquit();">Women</button>   
