New Organization of The Code

--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
-        
-</html>
 <!DOCTYPE html>
 <html>
-    <head>
-         <title>Test</title>
-          <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
-          <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-           <link rel = "stylesheet" type = "text/css"href = "style.css" />  
-           <script src="script.js"></script>                 
-    
-    </head>
-    <body style="background-color: white;">    
-        <div class="title">
-             <h1 style="text-align: center; font-family: 'Roboto'; color: white; font-size: 200px; margin:1px; padding:10px; letter-spacing: 0.32em;"> STYLE4U </h1>
-             <h3 id="GenderTXT">STYLE FOR EVERYONE</h3>
-        </div>
-        <div class="CButton">
-             <button id="Men" onclick="men();womenquit();">Men</button> <button id="Women"  onclick="women();menquit();">Women</button>   
-             <br> 
-             <img id="imgMen" src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg" width="400" height="600" style="visibility: hidden; margin: 50px 100px 50px 1px;"  >   
-             <img id="imgWomen" src="https://i.pinimg.com/564x/e3/4a/a9/e34aa9f77c34b668d214d9ee76115735.jpg" width="400" height="600" style="visibility: hidden; margin: 50px;"  >  
-        </div>  
-    </body>
-
+  <head>
+    <title>Test</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Alata"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body style="background-color: white;">
+    <div class="title">
+      <h1
+        style="
+          text-align: center;
+          font-family: 'Roboto';
+          color: white;
+          font-size: 200px;
+          margin: 1px;
+          padding: 10px;
+          letter-spacing: 0.32em;
+        "
+      >
+        STYLE4U
+      </h1>
+      <h3 id="GenderTXT">STYLE FOR EVERYONE</h3>
+    </div>
+    <div class="CButton">
+      <button id="Men" onclick="men();womenquit();">Men</button>
+      <button id="Women" onclick="women();menquit();">Women</button>
+      <br />
+      <img
+        id="imgMen"
+        src="https://i.pinimg.com/736x/c4/97/63/c49763b3a3ad042a429520c03703d67e.jpg"
+        width="400"
+        height="600"
+        style="visibility: hidden; margin: 50px 100px 50px 1px;"
+      />
+      <img
+        id="imgWomen"
+        src="https://i.pinimg.com/564x/e3/4a/a9/e34aa9f77c34b668d214d9ee76115735.jpg"
+        width="400"
+        height="600"
+        style="visibility: hidden; margin: 50px;"
+      />
+    </div>
+  </body>
 </html>
